# news-bot-say-hi

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  sources.example.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bitcoin-price.yml  ci.yml  github-trending.yml  gold-price.yml  kimlong-gold-price.yml  stock-price.yml
src/: base.py  cli.py  config.py  main.py  notifier.py  registry.py
src/sources/: bitcoin_price.py  github_trending.py  gold_price.py  kimlong_gold_price.py  stock_price.py
tests/: test_base.py  test_cli.py  test_config.py  test_gold_price_format.py  test_notifier.py  test_registry.py
tests/sources/: test_bitcoin_price.py  test_github_trending.py  test_gold_price.py  test_kimlong_gold_price.py  test_stock_price.py
